# differentiable_motion_planning

./: .env  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
notebooks/: clqr_dt.ipynb  mro_g2g.ipynb  n_ode.ipynb  omni_go2goal.py  omni_go2goal_layer.ipynb  omni_go2goal_traj_opt.ipynb  robots.py  unicycle.ipynb  unicycle_go2goal.ipynb
notebooks/gain_optimization/: mro_g2g.ipynb  omni_go2goal_traj_opt.ipynb  point_mass_push.ipynb  unicycle_acados.ipynb  unicycle_go2goal.ipynb
notebooks/time_optimization/: CLAUDE.md  alt_losses.py  invpend_clqr.py  invpend_dt.py  losses_config.json  pann_clqr.py  pann_clqr_dt.ipynb  pann_clqr_dt.py  plot_alt_losses.ipynb  plot_alt_losses.py  plot_invpend_dt.ipynb  plot_invpend_dt.py  plot_pann_clqr_dt.ipynb  plot_pann_clqr_dt.py  run_alt_losses.py  utils.py
notebooks/time_optimization/invpend/: invpend.ipynb  invpend_dt.py  invpend_plot.ipynb  invpend_plot.py  invpend_prob.py  invpend_train.py  plot_invpend_dt.ipynb  plot_invpend_dt.py
notebooks/time_optimization/pann/: pann.ipynb  pann_plot.ipynb  pann_plot.py  pann_train.py  plot_alt_losses.ipynb
notebooks/time_optimization/pann_clqr/: alt_losses.py  pann_clqr.py  pann_clqr_dt.py  plot_alt_losses.ipynb  plot_alt_losses.py  plot_pann_clqr_dt.ipynb  plot_pann_clqr_dt.py
notebooks/time_optimization/stiff_sys/: plot_stiff_sys_dt.py  stiff_sys.ipynb  stiff_sys_clqr.py  stiff_sys_dt.py  stiff_sys_plot.py  stiff_sys_train.py
src/dimp/robots/: __init__.py  force.py  omni.py  point_mass.py  robot.py  unicycle.py
src/dimp/utils/: __init__.py  disp.py  disp_anim.py
